[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/scene_scripts/settings/keybind_input.gd" type="Script" id=1]

[node name="keybind_input" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements_VBC" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction_Label" type="Label" parent="Elements_VBC"]
margin_right = 512.0
margin_bottom = 29.0
size_flags_vertical = 7
align = 1
valign = 1

[node name="Event_Label" type="Label" parent="Elements_VBC"]
margin_top = 33.0
margin_right = 512.0
margin_bottom = 62.0
size_flags_vertical = 7
align = 1
valign = 1

[node name="Buttons_HBC" type="HBoxContainer" parent="Elements_VBC"]
margin_top = 66.0
margin_right = 512.0
margin_bottom = 96.0
size_flags_vertical = 7

[node name="Accept_Button" type="Button" parent="Elements_VBC/Buttons_HBC"]
margin_right = 168.0
margin_bottom = 30.0
size_flags_horizontal = 3
disabled = true
text = "Accept"

[node name="Reset_Button" type="Button" parent="Elements_VBC/Buttons_HBC"]
margin_left = 172.0
margin_right = 340.0
margin_bottom = 30.0
size_flags_horizontal = 3
disabled = true
text = "Reset"

[node name="Cancel_Button" type="Button" parent="Elements_VBC/Buttons_HBC"]
margin_left = 344.0
margin_right = 512.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Cancel"
